--- a/Codezi.Application/Codezi.Application.csproj
+++ b/Codezi.Application/Codezi.Application.csproj
@@ -1,7 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Codezi.Domain\Codezi.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
