--- a/Codezi.WebApi/appsettings.json
+++ b/Codezi.WebApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLExpress;Initial Catalog=Codezi;Integrated Security=True"
+  } 
 }
