--- a/Codezi.WebApi/appsettings.json
+++ b/Codezi.WebApi/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLExpress;Initial Catalog=Codezi;Integrated Security=True"
-  } 
+  "AllowedHosts": "*"
 }
